# multi-agent-scouting-system

./: README.md  main.py  pyproject.toml
agents/: critic.py  doer.py  planner.py
agents/prompts/: critic_prompt.txt  doer_prompt.txt  planner_prompt.txt
orchestrator/: workflow.py
utils/: logger.py
