[project]
name = "multi-agent-scouting-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-ollama>=1.0.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]
